:bug: theme: Show navbar above project carousel
This changes the `.navbar` class to use a higher z-index so it does not
appear underneath the project carousel. This issue was most noticeable
on smaller viewports.

--- a/themes/toph/static/css/style.css
+++ b/themes/toph/static/css/style.css
@@ -47,7 +47,10 @@ h2, h4 { color: var(--accent-color); }
 
 /* ===[ Site navigation styling ]=== */
 
-.navbar { position: fixed; }
+.navbar {
+  position: fixed;
+  z-index: 100;
+}
 
 .dropdown-menu { background-color: var(--accent-color); }
 
